# mcp_server_for_databricks

./: .gitignore  README.md  auth_to_workspace.py  init.py  main.py  pyproject.toml  test_server.py  test_server_detailed.py  utils.py
src/: README.md  main.py
src/mcp_server_for_databricks/: __init__.py  app.py  main.py
src/mcp_server_for_databricks/auth/: __init__.py  databricks_auth.py  token_manager.py
src/mcp_server_for_databricks/client/: __init__.py  manager.py
src/mcp_server_for_databricks/config/: __init__.py  loader.py  models.py
src/mcp_server_for_databricks/databricks/: __init__.py  jobs.py  schemas.py  tables.py
src/mcp_server_for_databricks/mcp_tools/: __init__.py  registry.py
src/mcp_server_for_databricks/models/: __init__.py
src/mcp_server_for_databricks/utils/: __init__.py  logging.py
