[project]
name = "mcp_server_for_databricks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "databricks-sdk==0.50.0",
    "fastapi==0.115.12",
    "httpx>=0.28.1",
    "mcp[cli]>=1.6.0",
    "pytest==8.3.5",
    "pyyaml==6.0.2",
]
